# cpp_exercises

./: .gitignore  README.md
scientific_project/: CMakeLists.txt  scientific_project.cpp  scientific_project.h
scientific_project/data/: function_points.csv  test.csv
scientific_project/include/: gnuplot_histogram.h  histogram.h  math_utils.h  matrix.h  scientific_data.h  scientific_dataset.h  scientific_file.h  simple_gnuplot.h  statistics.h
scientific_project/src/: gnuplot_histogram.cpp  histogram.cpp  main.cpp  math_utils.cpp  matrix.cpp  scientific_data.cpp  scientific_dataset.cpp  scientific_file.cpp
scientific_project/tests/: test_matrix.cpp
